Support JWT and HTTP authorization #1013